Fix: Alignment of header checkbox with DataTables 2.3

--- a/css/select.dataTables.scss
+++ b/css/select.dataTables.scss
@@ -24,6 +24,12 @@ table.dataTable {
 
 	> thead > tr > .dt-select {
 		text-align: center;
+		vertical-align: middle;
+	
+		input.dt-select-checkbox {
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 
 	input.dt-select-checkbox {
